updated web pages w.r.t. TAGS

--- a/CV.html
+++ b/CV.html
@@ -440,24 +440,28 @@ Cambridge University.
  <LI>
    <A HREF="https://sites.google.com/view/taylorbrysiewicz/">Taylor Brysiewicz</a>, Beginning March 2015.  Ph.D. May 2020.
  </LI>
-   <br>
 <li>
-   <A HREF="http://www.math.tamu.edu/~walkere/">Elise Walker</a>, November 2017 &ndash; 
+   <A HREF="http://www.math.tamu.edu/~walkere/">Elise Walker</a>, Beginning  November 2017.  Ph.D. May 2022.
  </li>
  <li>
-   <A HREF="http://www.math.tamu.edu/~thomasjyahl/">Thomas Yahl</a>, January 2018 &ndash; 
+   <A HREF="http://www.math.tamu.edu/~thomasjyahl/">Thomas Yahl</a>, Beginning January 2018. Ph.D. May 2023.
  </li>
+   <br>
  <li>
  <A HREF="https://mattfaust.github.io">Matthew Faust</a>, September 2019 &ndash; 
  </li>
  <li>
    <A HREF="http://www.math.tamu.edu/~cbott2/"></a>C.J. Bott, November 2020 &ndash; 
  </li>
- 
  <li>
    <A HREF="https://jordylopez27.github.io/">Jordy Lopez-Garc&iacute;a</a>, March 2021 &ndash; 
  </li>
- 
+ <!------------------------------------------------------------------>
+   <li>
+     <A HREF=""></a>Somak Dutta, November 2023 &ndash; 
+    </li>
+ <!------------------------------------------------------------------>
+  
 
  <BR><BR>
  <LI> Mariana Pereira,  Graduate Student at The University of Massachusetts and Texas
