--- a/advising/index.html
+++ b/advising/index.html
@@ -26,12 +26,6 @@
      Jennifer Pickrel,   Master's Student in Distance Program.
     </li>-->
     <li>
-     A.J. Perea, Master's Student in Distance Program.
-    </li>
-    <li>
-     Osman Quinteros, Master's Student in Distance Program.
-    </li>
-    <li>
      Merri Stillman, Master's Student in Distance Program.
     </li>
     <br>
@@ -53,7 +47,7 @@
      <A HREF=""></a>Somak Dutta, TAMU Ph.D. Student.
     </li>
  <!------------------------------------------------------------------>
-     <br>
+    <br>
 
 
    </ul>
@@ -179,17 +173,17 @@
      Jonah Robinson,  TAMU Master's Student.
     </li>
     <li>
-     A.J. Perea,  Master's Student in Distance Program.
-    </li>
-    <li>
      Merri Stillman,  Master's Student in Distance Program.
     </li>
-    <li>
+ <!--   <li>
      Jennifer Pickrel,  Master's Student in Distance Program.
-    </li>
+    </li>-->
    <hr align=left width=40%>
     <li>
-     Osman Quinteros,  Master's Student in Distance Program.  Ggraduated in December 2023.
+     A.J. Perea, Master's Student in Distance Program.    Graduated in December 2023.
+    </li>
+    <li>
+     Osman Quinteros,  Master's Student in Distance Program.  Graduated in December 2023.
     </li>
     <li>
      Riley Barker,  TAMU Master's Student. Graduated in May 2022.
@@ -248,7 +242,12 @@
  <!------------------------------------------------------------------>
  <!------------------------------------------------------------------>
   <li>
-     <A HREF="http://mattfaust.github.io//">Matthew Faus</a>t, 2019&ndash;.
+    <A HREF=""></a>C.J. Bott, 2020&ndash;
+  </li>
+ <!------------------------------------------------------------------>
+ <!------------------------------------------------------------------>
+  <li>
+     <A HREF="http://mattfaust.github.io//">Matthew Faust</a>, 2019&ndash;.
    </li>
  <BR>
  <!------------------------------------------------------------------>
@@ -669,8 +668,7 @@
 <!----------------------------------------------------------->
 Return to Frank Sottile's <A HREF="index.html">Homepage</A>
 <BR>
-
-<!-- hhmts start -->Last modified: Sun May 24 15:24:01 CDT 2020 <!-- hhmts end -->
-
+<!---------------------------------------------------------------------------->
+<p>Last modified: Wed Jan 31 16:58:02 GMT 2024 by sottile</p>  
 </BODY>
 </HTML>
