--- a/conferences/TAGS24/index.html
+++ b/conferences/TAGS24/index.html
@@ -14,7 +14,7 @@
      <h2>Texas Algebraic Geometry Symposium</h2><br>
      Texas A&amp;M University 5 April &ndash; 7 April 2024.<br><br>
    </td><td rowspan=3>&nbsp;</td>
-   <td rowspan="3"><!--<img src="NSFLogo_200.png">--><br>
+   <td rowspan="3"><img src="NSFLogo_200.png"><br>
      <table><tr><td>&nbsp;</td></tr>
        <tr><td  width=200 bgcolor=#FFFFFF> <img src="tamu1.png"><br> <img src="mathematics.gif"> </td></tr>
        <tr><td>&nbsp;</td></tr>
@@ -26,7 +26,7 @@
                <font size=+2>College of Arts&nbsp;<br>&amp; Sciences</font>--> </table></td></tr>
       </table>
    </td>
-   <td rowspan="3" width=300><img src="SolarEclipse.jpg" width=300></td>xc
+   <td rowspan="3" width=300><img src="SolarEclipse.jpg" width=300></td>
   </tr>
   <!----------------------->
   <tr>
@@ -88,9 +88,14 @@ early-career participants. Request this with your registration. <br>   -->
 <!--<a href="local.html"><b>Local and Practical Information</b></a>    <br> -->
 
 
-
+<!---------------------------------------------------------------------------------------------------->
 <hr>
+<!---------------------------------------------------------------------------------------------------->
+TAGS 2024 is supported in part by NSF grant DMS-2349244, as well as the Department of Mathematics at Texas A&amp;M University.
 
+<!---------------------------------------------------------------------------------------------------->
+<hr>
+<!---------------------------------------------------------------------------------------------------->
 
 </body></html>
 
