--- a/service.html
+++ b/service.html
@@ -326,19 +326,11 @@
  <br>
 <!--------------------------------------------------------->
   <dd>
-    Merri Stillman,  TAMU Master's Student.
+    Merri Stillman,  TAMU Master&apos;s Student.
  </dd>
  <!---------------------------------------------------------------------------------------------------->
   <dd>
-    A.J. Perea,  TAMU Master's Student.
- </dd>
- <!---------------------------------------------------------------------------------------------------->
-  <dd>
-    Osman Quinteros,  TAMU Master's Student.
- </dd>
- <!---------------------------------------------------------------------------------------------------->
-  <dd>
-    Jonah Robinson,  TAMU Master's Student.
+    Jonah Robinson,  TAMU Master&apos;s Student.
  </dd>
  </dl>
   
@@ -351,18 +343,8 @@
 </table>
 
 <hr>
-<address></address>
-<!-- hhmts start -->Last modified: Sat Mar 18 12:50:01 CET 2023 <!-- hhmts end -->
 <!---------------------------------------------------------------------------->
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-12943815-1");
-pageTracker._trackPageview();
-} catch(err) {}</script>
+<p>Last modified: Wed Jan 31 16:54:44 GMT 2024 by sottile</p>  
 <!---------------------------------------------------------------------------->
 </body> </html>
 
