--- a/talks.html
+++ b/talks.html
@@ -141,6 +141,12 @@
   </li>
   <!---------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------->
+</ul>
+<hr>
+<B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
+<ul>
+ <!---------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Galois groups in Enumerative Geometry</I></font>,
     Geometry Seminar, University of Edinburgh.
@@ -162,12 +168,6 @@
    <a href="talks/24/CPoDPO.txt">abstract</a> <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
   </li>
   <!---------------------------------------------------------------------------------------->
-  <!---------------------------------------------------------------------------------------->
-</ul>
-<hr>
-<B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
-<ul>
- <!---------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>The game of Criss-Cross</I></font>
@@ -553,18 +553,8 @@
 </table>
 
 <hr>
-<address></address>
-<!-- hhmts start -->Last modified: Fri Jul 10 17:52:17 CDT 2020 <!-- hhmts end -->
 <!---------------------------------------------------------------------------->
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-12943815-1");
-pageTracker._trackPageview();
-} catch(err) {}</script>
+<p>Last modified: Wed Jan 31 16:55:56 GMT 2024 by sottile</p>  
 <!---------------------------------------------------------------------------->
 </body> </html>
 
