--- a/teaching.html
+++ b/teaching.html
@@ -190,15 +190,9 @@
 
 <dl>
   <dd>
+ <!---------------------------------------------------------------------------------------------------->
     Merri Stillman,  TAMU Master's Student.
- </dd>
  <!---------------------------------------------------------------------------------------------------->
-  <dd>
-    A.J. Perea,  TAMU Master's Student.     Passed his Master's exam October 2023.
- </dd>
- <!---------------------------------------------------------------------------------------------------->
-  <dd>
-    Osman Quinteros,  TAMU Master's Student.   Passed his Master's exam October 2023.
  </dd>
  <!---------------------------------------------------------------------------------------------------->
   <dd>
@@ -240,18 +234,7 @@
 </table>
 
 <hr>
-<address></address>
-<!-- hhmts start -->Last modified: Mon Jul 27 10:20:49 CDT 2020 <!-- hhmts end -->
 <!---------------------------------------------------------------------------->
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-12943815-1");
-pageTracker._trackPageview();
-} catch(err) {}</script>
-<!---------------------------------------------------------------------------->
+<p>Last modified: Wed Jan 31 16:46:44 GMT 2024 by sottile</p>  
 </body> </html>
  
