added Arnold and Term Paper

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
    <!--------------------------------------------------------------------------------->   
    <!------   This is to fit in the rotation and cerdits  ---------------------------->   
      <table> 
-       <tr valign=bottom><td><a href="Frank.html"><IMG SRC="images/frank.jpg" ALT="Giant White Squill August 2020"></a><br>
+       <tr valign=bottom><td><a href="Frank.html"><IMG SRC="images/frank.jpg" ALT="Grand Canyon March 2023"></a><br>
 	   Photo Credit: Taylor Brysiewicz
  <!--   </td><td>&nbsp;</td>
    <td valign=right class="rotate">Photo: Sarah Witherspoon</td>-->
@@ -285,6 +285,8 @@
       SRC="images/siaga_2016.jpg" BORDER=2 height=130 ALT="SIAM J on Applied Algebra and Geometry"></A> 
         <A HREF="http://www.maa.org/publications/periodicals/american-mathematical-monthly"><IMG
       SRC="images/amm_2014.jpg" BORDER=2 height=130 ALT="American Mathematical Monthly" ></A> 
+        <A HREF="https://armj.math.stonybrook.edu/"><IMG
+      SRC="images/arnold_24.webp" BORDER=2 height=130 ALT="Arnold Mathematical Journal" ></A> 
      </td>
    </tr>
    <!---------------------------------------------------------------------------->
@@ -292,7 +294,8 @@
     <TD colspan=2>
       <!---------------------------------------------------------------------------->
       &nbsp; I am one of the corresponding editors for the SIAM Journal on Applied Algebra and Geometry.<br>
-      &nbsp; I am an Associate Editor for the American Mathematical Monthly.
+      &nbsp; I am an Associate Editor for the American Mathematical Monthly.<br>
+      &nbsp; I am an Associate Editor for the Arnold Mathematical Journal.
     </td>
     </tr>
    <!---------------------------------------------------------------------------->
@@ -369,7 +372,7 @@ pageTracker._trackPageview();
  </tr>
 </table>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Wed Jan 03 13:05:36 PST 2024 by sottile</p>  
+<p>Last modified: Mon Feb 05 05:49:20 GMT 2024 by sottile</p>  
  </body>
 </html> 
 
