--- a/service.html
+++ b/service.html
@@ -78,7 +78,7 @@
 </td>
 <td>
 <!---------------------------------------------------------------->
-<table width=900> 
+<table width=1050> 
  <tr valign=top>
   <td width=140 align=center>
    <img src="images/frank_sm.jpg"><br>
@@ -93,11 +93,13 @@
    <a href="http://thecostofknowledge.com">Boycott</a>.</font>
 
   </td>
-  <td align=left rowspan=2>
+  <td align=left rowspan=2 width=200pt>
      <A HREF="http://www.siam.org/journals/siaga.php"><IMG
-      SRC="images/siaga_2016.jpg" BORDER=2 width=90 ALT="SIAM J on Applied Algebra and Geometry"></A>
+      SRC="images/siaga_2016.jpg" BORDER=2  height=130pt ALT="SIAM J on Applied Algebra and Geometry"></A>
      <A HREF="http://www.maa.org/publications/periodicals/american-mathematical-monthly"><IMG
-      SRC="images/amm_2014.jpg" BORDER=2 width=90 ALT="American Mathematical Monthly" ></A> 
+      SRC="images/amm_2014.jpg" BORDER=2  height=130pt ALT="American Mathematical Monthly" ></A> 
+        <A HREF="https://armj.math.stonybrook.edu/"><IMG
+      SRC="images/arnold_24.webp" BORDER=2 height=130 ALT="Arnold Mathematical Journal" ></A> 
   </td>
   <TD rowspan=2 align=left>
     <table>
@@ -130,7 +132,7 @@
 <ul>
   <li>
      Corresponding Editor, 
-     <A HREF="http://www.siam.org/journals/sidma.php"></a>SIAM Journal on
+     <A HREF="http://www.siam.org/journals/sidma.php">SIAM Journal on
      Applied Algebra and Geometry</A>.
   </li>
   <!--------------------------------------------------------->
@@ -140,22 +142,29 @@
   Mathematical Monthly</a>.
   </li>
   <!--------------------------------------------------------->
+  <!--------------------------------------------------------->
+  <li>
+     Editorial Board, 
+     <A  HREF="https://armj.math.stonybrook.edu/">Arnold Mathematical Journal</a>.
+  </li>
+  <!--------------------------------------------------------->
 </ul>
 <!-------------------------------------------------------->
 <B><FONT SIZE=+1 color=brown>Scientific Committees</FONT></B>
 <ul>
-  <!--------------------------------------------------------->
- <li>
-  Programme Committee,
-  Canadian Discrete and Algorithmic Mathematics <a href="http://www.canadam.ca">CanaDAM 2023</a>,
-   Winnipeg, Manitoba, Canada, June 5&ndash;8, 2023.
- </li>
   <!--------------------------------------------------------->
   <!----------------------------------------------------------->
   <li>Co-Chair, Executive (Programme) Committee,
   <a href="https://mega.sciencesconf.org/resource/page/id/6"></a> MEGA 2024, Leipzig,
   Germany, 29 July&ndash;2 August 2024.
   </li>
+  <!---------------------------------------------------------------------------------------------------->
+ <li>
+  Programme Committee,
+  Canadian Discrete and Algorithmic Mathematics <a href="http://www.canadam.ca">CanaDAM 2023</a>,
+   Winnipeg, Manitoba, Canada, June 5&ndash;8, 2023.
+ </li>
+  <!--------------------------------------------------------->
   <!----------------------------------------------------------->
   <li>Advisory Board, <a href="https://mega.sciencesconf.org/resource/page/id/6">MEGA: Effective Methods in Algebraic Geometry</a>,
       Since 2000s.
@@ -344,7 +353,7 @@
 
 <hr>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Wed Jan 31 16:54:44 GMT 2024 by sottile</p>  
+<p>Last modified: Mon Feb 05 06:01:30 GMT 2024 by sottile</p>  
 <!---------------------------------------------------------------------------->
 </body> </html>
 
