--- a/teaching/24.1/629.html
+++ b/teaching/24.1/629.html
@@ -40,9 +40,9 @@ Information for
 <!--------------------------------------------------------->
 <!--------------------------------------------------------->
 <!--------------------------------------------------------->
- <!-- <HR>
-  Information about your <a href="Term_paper.html">Term Paper</a>.<br>
-    Information for building your <a href="Hyperbolic_Soccerballs.html">Hyperbolic soccer ball</a>.
+ <HR>
+  Information about your <a href="Term_Paper.html">Term Paper</a>.<br>
+ <!--    Information for building your <a href="Hyperbolic_Soccerballs.html">Hyperbolic soccer ball</a>.
     <a href="triangle.gif">View</a> your triangle data.<br>
    Information about your <a href="Second_paper.html">Second Paper </a>.<br>
   You will need to both email a .pdf to me at <TT><a href="mailto:sottile@tamu.edu">sottile@tamu.edu</a></TT>,
@@ -273,7 +273,7 @@ I have also been greatly helped by Professor Emeritus Fulling and Professor Emer
 
 <!---------------------------------------------------------------------------------------------------->
 <!-- hhmts start Last modified: Sun Apr 19 09:41:25 CDT 2020--> <!-- hhmts end -->
-<p>Last modified: Mon Jan 29 21:55:16 GMT 2024 by sottile</p>
+<p>Last modified: Sat Feb 03 22:12:36 GMT 2024 by sottile</p>
 <!---------------------------------------------------------------------------------------------------->
 </body> </html>
 
