--- a/conferences.html
+++ b/conferences.html
@@ -124,6 +124,12 @@
  <!---------------------------------------------------------------------------->
  <!--------------------------------------------------------->
  <li>
+   <a href="https://sites.google.com/a/wagsymposium.org/current/davis-spring-2024">WAGS</a>,
+   UC Davis, 27 April &ndash; 28 April, 2024.
+ </li>
+ <!--------------------------------------------------------->
+ <!--------------------------------------------------------->
+ <li>
    <a href="conferences/TAGS24/index.html">Texas Algebraic Geometry Symposium</a>,
    Texas A&amp;M University,
    5  &ndash; 7 April, 2024.<br>
