--- a/teaching/24.1/Term_Paper_Topics.html
+++ b/teaching/24.1/Term_Paper_Topics.html
@@ -16,6 +16,22 @@
 <!---------------------------------------------------------------------------->
 <!--------------------------------------------------------->
 <hr>
+<h2>Term Paper Topics from Spring 2024</h2>
+<ul>
+  <li>History of the calculus of variations</li><!--tommie settlemyre-->
+  <li>Interactive virtual timeline on the history of &pi;</li><!--Rachel Carlson-->
+  <li>Cryptography in WWII</li><!--Taylor Schofield-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+</ul>
+<!--------------------------------------------------------->
+<!--------------------------------------------------------->
+<hr>
 <h2>Term Paper Topics from Spring 2022</h2>
 <ul>
  <li>Cracking the Enigma machine of WWII.</li>  <!-- Steve Bosze -->
@@ -31,8 +47,6 @@
  <li>history of mathematics in music</li><!--  Adam Melchin -->
  <li>Mathematics and Airplanes</li><!-- Chad-Anthony Campbell -->
  <li>History of the Calculus Reform movement</li> <!-- Rayna Smith -->
-<!--  <li></li>-->
-<!--  <li></li>-->
 </ul>
 <!--------------------------------------------------------->
 <!--------------------------------------------------------->
