--- a/teaching/24.1/Term_Paper.html
+++ b/teaching/24.1/Term_Paper.html
@@ -26,7 +26,9 @@ students have already chosen for our class.
   Sottile629</font>-->
 
 <hr>
-  This will be a fairly substantial paper.  I expect this to be well-researched with a number of sources, which should include some books
+This will be a fairly substantial paper.
+It should include both non-trivial mathematics and non-trivial history.
+I expect this to be well-researched with a number of sources, which should include some books
   and/or journal articles, as well as easier to get (and less reliable) on-line sources.
   This will be challenging, but using the TAMU library and its electronic resources, as well as libraries in your home town can be a help.
   (I have often experienced the power of the TAMU library; For example, once I needed to research a topic for a book I was writing, and I was
@@ -38,7 +40,7 @@ students have already chosen for our class.
          Association of America).  I am an editor for the latter, and have read it off and on since I was given a subscription in High
          school as a prize from a math contest.<br><br>
 
-   <font color=red>A note about length:</font> You will need more space to develop your ideas than the last two papers.
+   <font color=red>A note about length:</font> You will need space to develop your ideas.
    I expect that it will be impossible to do this in a paper with fewer than 2000 words. <br><br>
 
    <font color=red>A note about formatting:</font>  Please use double (actually 1.5) spacing between the lines, so that I may scrawl my
@@ -166,7 +168,7 @@ These are included not to delineate what you will write about, but to stimulate 
 </ul>
 <hr>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Sun Feb 04 09:28:05 GMT 2024 by sottile</p>  
+<p>Last modified: Tue Feb 06 08:45:33 GMT 2024 by sottile</p>  
 <!---------------------------------------------------------------------------->
 
 </body> </html>
