--- a/teaching/24.1/weeks/W04.html
+++ b/teaching/24.1/weeks/W04.html
@@ -10,12 +10,12 @@
 <!--------------------------------------------------------->
 <HR>
 <!--------------------------------------------------------->
-    <a href="http://piazza.com/tamu/spring2022/math629/home">Piazza Class page</a>.
+    <a href="http://piazza.com/tamu/spring2024/math629/home">Piazza Class page</a>.
 <!--------------------------------------------------------->
 <HR>
 <!-------------------------------------------------------------->
 
-<font color=maroon><h3>Week 4: 7 February 2022. </h3></font>
+<font color=maroon><h3>Week 4: 6 February 2024. </h3></font>
 <ul>
   <li><font color=maroon><B>Opening Remarks:</b></font></li>
 
@@ -26,8 +26,9 @@
   this book, from the sine function to the much more exotic elliptic functions that were a focus (and glory of) of 19th century mathematics.
 
  <p> 
-  This week, I will go a quite easy on you, as you working on your <a href="../Book_Review.html">Book Reviews</a>.
-   We will read about the mathematics between the Greeks and the Renaissance in Europe.
+  This week, I will go a easy on you, but you can use this time to research your <a href="../Term_Paper.html">Term Paper</a> and to try and
+  attend to the copious reading.
+  We will read about the mathematics between the Greeks and the Renaissance in Europe.
   Stillwell concentrates on a small slice&mdash;the  number-theoretic work in Asia (China and India).
   We see linear Diophantine equations and the fantastic Chinese Remainder Theorem (which was rediscovered later in Europe and continues to
   be important today).
@@ -38,14 +39,12 @@
 
   Stillwell makes an interesting point at the start of Section 5.1; that while the Greeks influenced many of the main themes of modern
   mathematics, there were not neessarily the first to people to consider these ideas, nor did they do it the best.<br>
-
-
   
-<br><br>
+<br>
 
  Stillwell skips two  important developments:
  <ul>
-   <li>The origins and rise of the Indo-Arabic number system that we all use today, and</li>
+   <li>The origins and rise of the Indo-Arabic number system that we all use today, including the introduction of 0, and</li>
    <li>how that number system and the algorithms for multiplication made their way from the Islamic world of the 10th
      century (give or take a couple of hundred years) to the medieval world.<br>
      Some of this is found in the interesting book
@@ -54,9 +53,20 @@
    The readings from St. Andrews fill in some of these gaps, and give a whole lot more insight on other mathematical developments from Asia.<br>
     I learned learned a lot about these topics from two books I own, Berggrens' <i>Episodes in the Mathematics of Medieval Islam</i> and Swetz's
      <i>Capitalism and Arithmetic: The New Math of the 15th Century</i>.   
-   
+
+  <li><font color=maroon><B>Note:</b></font> This weekend, I leave Cambridge, and travel to Cardiff and Swansea (towns in Wales).
+    This includes attneding and speaking at a 1-day conference in Swansea, giving a talk to undergraduates, giving a colloquium talk at
+    Cardiff, and meeting with several collaborators and old friends in mathematics, <it>and</it> meeting someone who (with me) is on a
+    committee to     select a winner of a mathematics award/prize in the field of combinatorics.
+    On Wednesday, I fly back to the US.
+    The point of this, besides lamenting that I am leaving my former college in Cambridge where I lived for 3 years, is that I will not
+    be able to respond to much from Sunday through Thursday of next week.
+  
  <li><font color=maroon><B>Reading:</b></font>
  <ul>
+     <li>Please watch  <a href="https://www.youtube.com/watch?v=2WcbPcGrQZU">The History of Mathematics</a>, from minute 54 to
+	minute 93, on Chinese, Indian, and Islamic mathematics. 
+     </li>
    <li> Chapter 5 of Stillwell on Number Theory in Asia (China and India).</li>
 
    <li>St. Andrews pages on <a href="https://mathshistory.st-andrews.ac.uk/HistTopics/category-indians/">Indian Mathematics</a>.
@@ -76,8 +86,8 @@
    
    </ul>
 
- <li><font color=maroon><b>Assignment:</b> Due Monday, February 14.</font> (HW 4)<br>
-   Here is a <a href="../HW/HW4.pdf">.pdf</a> and a  <a href="../HW/HW4.tex">LaTeX source</a> of the assignment.
+ <li><font color=maroon><b>Assignment:</b> Due Monday, February 12.</font> (HW 4)<br>
+   Here is a <a href="../HW/HW04.pdf">.pdf</a> and a  <a href="../HW/HW04.tex">LaTeX source</a> of the assignment.
    You will need the  <a href="../HW/Thabit.pdf">image file</a> if you LaTeX this (I have a postscript version, too).<br>
    The quiz (on Gradescope) is two exceptionally short questions with even shorter answers that you need to take after you have
   completed the reading.<br>
@@ -109,13 +119,10 @@
          (I have a soft spot for Heron's formula, having learned it in middle school, it is the one bit of my mathematical knowledge
           that I have used in a practical consultation.   I can tell the story on Piazza if anyone asks.)
     </li>
-    <li> The Islamic mathematician Thabit gave a marvelous generalization of the Pythagorean Theorem.
-          Its statement is problem 2 on 
-       <a href="http://www.math.tamu.edu/~don.allen/masters/islamic/problems/hmk_islamic.htm">Allen's page</a>.
-    Do this problem.
-<!--     Assume that the angle at <i>A</i> is obtuse.-->
-<!--  The students mostly googled this answer.  If you give it in the future, disguise it -->
-       By `similarity', he means use similar triangles.
+    <li> There is a marvelous generalization of the Pythagorean Theorem that I'd like you to try your hand on.
+         It is on the homework sheet, and was done by a mathematician from one of the traditions we are reading about.
+ <!--  The students mostly googled this answer.  If you give it in the future, disguise it -->
+          Use similar triangles.
        I realize that the figure may pose a problem.
     </li>
   </ol>
@@ -127,18 +134,7 @@
 <!-------------------------------------------------------------->
 <address></address>
  <!---------------------------------------------------------------------------->
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-12943815-1");
-pageTracker._trackPageview();
-} catch(err) {}</script>
-<!---------------------------------------------------------------------------->
-<!-- hhmts start -->Last modified: Tue Jan 28 10:50:40 CET 2020 <!-- hhmts end -->
-<p>Last modified: Sun Feb 06 10:50:59 CST 2022 by sottile</p>
+<p>Last modified: Tue Feb 06 20:16:58 GMT 2024 by sottile</p>
 
 </body> </html>
 
