--- a/conferences.html
+++ b/conferences.html
@@ -93,28 +93,35 @@
     I am one of the Co-chairs of the Executive Committee for
     <a href="https://www.mis.mpg.de/calendar/conferences/2024/mega.html">MEGA 2024</a>, along with Kaie Kubjas.
   <td align=left>
-<!-------------------------------------------------------------------->
-<!-------------------------------------------------------------------->
+<!----------------------------------------------------------------------------->
+<!----------------------------------------------------------------------------->
   </td>
  </tr>
-<!------------------------------------------------------------>
+<!----------------------------------------------------------------------------->
 <tr>
 <td colspan=3>
-<!------------------------------------------------------------------------>
+<!----------------------------------------------------------------------------->
 <hr>
-<!------------------------------------------------------------------------>
+<!----------------------------------------------------------------------------->
 <B><FONT SIZE=+1 color=brown>Mark Your Calendar</FONT></B>
 
 <UL>
- <!--------------------------------------------------------->
+ <!---------------------------------------------------------------------------->
+  <li> AMS Special session on
+    <a href="SanAntionio24/index.html"></a>Applications of Algebraic Geometry,
+    Central Section Meeting 14&ndash;15 September 2024, University of Texas, San Antonio.
+    Co-organizing with Alperen Ergur and Anne Shiu
+ </li>
+ <!---------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------->
  <li>
    <a href="https://www.mis.mpg.de/calendar/conferences/2024/mega.html">Effective Methods in Algebraic Geometry (MEGA), 29 July &ndash; 2
    August 2024, Leipzig</a>. 
    <a href="conferences/MEGA2024/MEGA2024_poster.pdf">poster</a> &nbsp; 
    <a href="conferences/MEGA2024/Call.txt">Call for Participation</a>.
  </li>
- <!--------------------------------------------------------->
- <!--------------------------------------------------------->
+ <!---------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------->
  <li>
    Conference on
    <a href="http://www.fields.utoronto.ca/activities/23-24/enumerative-geometry">Computational and Applied  Enumerative Geometry</a>, 
@@ -122,7 +129,7 @@
    <a href="conferences/Frank_24.pdf">poster</a>.
  </li>
  <!---------------------------------------------------------------------------->
- <!--------------------------------------------------------->
+ <!---------------------------------------------------------------------------->
  <li>
    <a href="https://sites.google.com/a/wagsymposium.org/current/davis-spring-2024">WAGS</a>,
    UC Davis, 27 April &ndash; 28 April, 2024.
