--- a/teaching/24.1/weeks/W04.html
+++ b/teaching/24.1/weeks/W04.html
@@ -88,7 +88,7 @@
 
  <li><font color=maroon><b>Assignment:</b> Due Monday, February 12.</font> (HW 4)<br>
    Here is a <a href="../HW/HW04.pdf">.pdf</a> and a  <a href="../HW/HW04.tex">LaTeX source</a> of the assignment.
-   You will need the  <a href="../HW/Thabit.pdf">image file</a> if you LaTeX this (I have a postscript version, too).<br>
+   You will need the  <a href="../HW/NewPythagoras.pdf">image file</a> if you LaTeX this (I have a postscript version, too).<br>
    The quiz (on Gradescope) is two exceptionally short questions with even shorter answers that you need to take after you have
   completed the reading.<br>
   <b><font color=maroon>To hand in:</font></b>  <font color=red>We are using Gradescope for homework submission</font>.
@@ -134,7 +134,7 @@
 <!-------------------------------------------------------------->
 <address></address>
  <!---------------------------------------------------------------------------->
-<p>Last modified: Tue Feb 06 20:16:58 GMT 2024 by sottile</p>
+<p>Last modified: Wed Feb 07 12:54:23 GMT 2024 by sottile</p>
 
 </body> </html>
 
