--- a/teaching/24.1/Term_Paper_Topics.html
+++ b/teaching/24.1/Term_Paper_Topics.html
@@ -21,9 +21,12 @@
   <li>History of the calculus of variations</li><!--tommie settlemyre-->
   <li>Interactive virtual timeline on the history of &pi;</li><!--Rachel Carlson-->
   <li>Cryptography in WWII</li><!--Taylor Schofield-->
-<!--  <li></li>-->
-<!--  <li></li>-->
-<!--  <li></li>-->
+  <li>Mathematics behind M.C. Escher's artwork</li><!-- Jorge Canada -->
+  <li>The Riemann Hypothesis</li><!-- Niaz Azeez -->
+  <li>Human Computers</li><!-- Simeon Nakielny -->
+  <li>History of Linear Algebra</li><!-- Hunter Shepard -->
+  <li>Mathematics and Airplanes</li><!-- Nikole Vernamonti -->
+  <li>Mathematics of War</li><!-- Maxwell Cao -->
 <!--  <li></li>-->
 <!--  <li></li>-->
 <!--  <li></li>-->
