updated TAGS 24 website

--- a/conferences.html
+++ b/conferences.html
@@ -109,8 +109,9 @@
  <!---------------------------------------------------------------------------->
   <li> AMS Special session on
     <a href="SanAntionio24/index.html"></a>Applications of Algebraic Geometry,
-    Central Section Meeting 14&ndash;15 September 2024, University of Texas, San Antonio.
-    Co-organizing with Alperen Ergur and Anne Shiu
+    <a href="http://www.ams.org/meetings/sectional/2319_program.html">AMS Central Section Meeting 14&ndash;15 September 2024</a>,
+    University of Texas, San Antonio.
+    Co-organizing with <a href="https://alpergur.xyz/">Alperen Ergur</a> and <a href="https://people.tamu.edu/~annejls/">Anne Shiu</a>.
  </li>
  <!---------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------->
