--- a/conferences/TAGS24/index.html
+++ b/conferences/TAGS24/index.html
@@ -21,14 +21,17 @@
        <tr>   <td bgcolor=#FFFFFF>
 	     <table>     
               <tr><td bgcolor="880000"><img height=100 src="TAM-Logo-white.png"></td>
-             <!--<td bgcolor=#FFFFFF>&nbsp;</td>
+             <td bgcolor=#FFFFFF>&nbsp;</td>
              <td bgcolor=#FFFFFF colspan=2><font size=-1>TEXAS A&M UNIVERSITY</font><br>
-               <font size=+2>College of Arts&nbsp;<br>&amp; Sciences</font>--> </table></td></tr>
+               <font size=+2>College of Arts&nbsp;<br>&amp; Sciences</font> </table></td></tr>
       </table>
    </td>
    <td rowspan="3" width=300><img src="SolarEclipse.jpg" width=300></td>
+   <td rowspan="3" width=180><img src="Before.jpg" width=175><br>
+                             <img src="Annulus.jpg" width=175>
+                             <img src="After.jpg" width=175><br></td>
   </tr>
-  <!----------------------->
+  <!------------------------------------------->
   <tr>
     <td>
       The Texas Algebraic Geometry Symposium is a yearly joint seminar of Rice University,
@@ -38,9 +41,8 @@
       <br>
       The Spring 2024 edition is aligned with an astronomical
       syzygy&mdash;<a href="https://www.greatamericaneclipse.com/">The Great American Eclipse of 2024</a>, which will pass over Texas on
-      Monday, April 8, the day after the conference, which will be held over the  weekend of April 5 &ndash; 7 in  2024 on the campus of
-      Texas A&amp;M University 
-      in College  Station.<br><br> 
+      Monday, April 8, the day after the conference.
+      The organizers will also provide attendees with eclipse glasses, with which you may look at the eclipse outside of totality.<br><br> 
 
       <b>Speakers:</b><br>
   &nbsp;  <a href="https://www.math.uga.edu/directory/people/pierrick-bousseau">Pierrick Bousseau</a>      &nbsp;
@@ -68,9 +70,35 @@
 </table>
 
 
-<!---------------------------------------------------------------------------------->
+<!----------------------------------------------------------------------------------------------------->
 <hr>
-<!---------------------------------------------------------------------------------->
+<!----------------------------------------------------------------------------------------------------->
+<b><a href="https://forms.gle/ZcFeCGx92Tsve4Nd8"></a>Registration</b>: <font color=red>coming soon</font><br>
+
+<b><a href="posters.html"></a>Poster Session:  </b> There will be a poster session for participants,
+     with a prize for the best poster by a student or postdoc.<br>
+
+<b>Funding:</b> Conference attendance is supported by NSF grant DMS-2349244.
+We will have some support available to cover travel expenses and accommodation for graduate students and
+early-career participants. Request this with your registration. <br>
+
+<a href="local.html"><b>Local and Practical Information</b></a>  <font color=red>(Under Construction)</font>   <br>
+<!----------------------------------------------------------------------------------------------------->
+<hr>
+<!----------------------------------------------------------------------------------------------------->
+
+
+
+<b>Schedule:  </b>
+While the precise schedule has not yet been determined, the following is known:<br>
+The meeting starts on April 5 after the Second Maxson Lecture, which will be delivered by David Eisenbud from 4&ndash;5 PM.<br>
+There will be one or two talks, and a catered dinner thsat evening.<br>
+On Saturday, there will be several lectures, a poster session, and a conference dinner, <br>
+and the conference will continue through early afternoon on Sunday, likely finishing by 1 PM.
+
+<!---------------------------------------------------------------------------------------------------->
+<hr>
+<!---------------------------------------------------------------------------------------------------->
 <b>TAGS Steering Comittee:  </b>
 Chiara Damiolini and Bernd Siebert (UT Austin),
 Anthony V&aacute;rilly-Alvarado  and Brandon Levin (Rice University),
@@ -92,7 +120,6 @@ early-career participants. Request this with your registration. <br>   -->
 <hr>
 <!---------------------------------------------------------------------------------------------------->
 TAGS 2024 is supported in part by NSF grant DMS-2349244, as well as the Department of Mathematics at Texas A&amp;M University.
-
 <!---------------------------------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------------------------------->
