--- a/conferences/index.html
+++ b/conferences/index.html
@@ -42,7 +42,7 @@
  <!--------------------------------------------------------->
  <!--------------------------------------------------------->
  <li>
-   Co-organized with <a href="https://sites.google.com/view/taylorbrysiewicz/home">Taylor Brysiewicz</a, 
+   Co-organized with <a href="https://sites.google.com/view/taylorbrysiewicz/home">Taylor Brysiewicz</a>, 
    AMS Special Session on <a href=""></a>Applied Enumerative Geometry, 
    Joint Mathematics Meetings, 4&ndash;5 January 2023.
  </li>
