--- a/teaching/24.1/Term_Paper_Topics.html
+++ b/teaching/24.1/Term_Paper_Topics.html
@@ -40,7 +40,7 @@
  <li>Cracking the Enigma machine of WWII.</li>  <!-- Steve Bosze -->
  <li>Critique of Euclid and modern treatments of geometry.</li> <!-- AJ Perea -->
  <li>History of the Pitot Tube</li><!-- Briana Toelke -->
- <li>Four Color Theorem./li>
+ <li>Four Color Theorem.</li>
  <li>A Brief History of Linear Algebra</li>
  <li>Cryptography in WWII</li>
  <li>History of Probablilty and Statistics</li><!-- Sarah Mcintyre  -->
@@ -80,7 +80,7 @@
   <li>Bayes's Rule as a Weapon: A Journey Through War, Disease, and Crime</li>
   <li>Coordinate Minecraft Geometry</li>
   <li>The Riemann Hypothesis: An Introduction</li>
-  <li>The Significance of Hilbert's Problems to the Advancement of Mathemataics</li>
+  <li>The Significance of Hilbert's Problems to the Advancement of Mathematics</li>
 </ul>
 
 <!--------------------------------------------------------------------------------->
